--- a/.github/workflows/ghActivity.yml
+++ b/.github/workflows/ghActivity.yml
@@ -1,4 +1,4 @@
-name: Update README
+name: Update Github Activity In Readme
 
 on:
   schedule:
@@ -16,4 +16,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          COMMIT_MSG: 'Specify a custom commit message'
+          COMMIT_MSG: 'Updating the Github Activity In Readme Profile'
