--- a/.github/workflows/wakaStats.yml
+++ b/.github/workflows/wakaStats.yml
@@ -21,6 +21,7 @@ jobs:
           SHOW_PROJECTS: "False"
           SHOW_COMMIT: "False"
           SHOW_DAYS_OF_WEEK: "False"
+          SHOW_LOC_CHART: "False"
           SHOW_LINES_OF_CODE: "True"
           SHOW_OS: "True"
           LOCALE: "en_IN"
