--- a/.github/workflows/wakaStats.yml
+++ b/.github/workflows/wakaStats.yml
@@ -3,8 +3,7 @@ name: Waka Readme
 on:
   workflow_dispatch:
   schedule:
-    # Runs at 00:00AM UTC
-    - cron: '0 0 * * *'
+    - cron: '30 18 * * *'
 
 jobs:
   update-readme:
@@ -15,13 +14,13 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_PROFILE_VIEWS: "False"
-          SHOW_LANGUAGE_PER_REPO: "False"
-          SHOW_LANGUAGE: "False"
-          SHOW_PROJECTS: "False"
-          SHOW_COMMIT: "False"
-          SHOW_DAYS_OF_WEEK: "False"
-          SHOW_LOC_CHART: "False"
-          SHOW_LINES_OF_CODE: "True"
-          SHOW_OS: "True"
-          LOCALE: "en_IN"
+          # SHOW_PROFILE_VIEWS: "False"
+          # SHOW_LANGUAGE_PER_REPO: "False"
+          # SHOW_LANGUAGE: "False"
+          # SHOW_PROJECTS: "False"
+          # SHOW_COMMIT: "False"
+          # SHOW_DAYS_OF_WEEK: "False"
+          # SHOW_LOC_CHART: "False"
+          # SHOW_LINES_OF_CODE: "True"
+          # SHOW_OS: "True"
+          # LOCALE: "en_IN"
