--- a/.github/workflows/wakaStats.yml
+++ b/.github/workflows/wakaStats.yml
@@ -18,3 +18,8 @@ jobs:
           SHOW_LINES_OF_CODE: "True"
           SHOW_PROFILE_VIEWS: "False"
           SHOW_PROJECTS: "False"
+          SHOW_OS: "False"
+          SHOW_LANGUAGE: "True"
+          SHOW_DAYS_OF_WEEK: "True"
+          SHOW_COMMIT: "True"
+          SHOW_LANGUAGE: "True"
